# Copyright 2019 The Hafnium Authors.
#
# This program is free software; you can redistribute it and/or
# modify it under the terms of the GNU General Public License
# version 2 as published by the Free Software Foundation.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
# GNU General Public License for more details.

import("//build/linux/linux.gni")

linux_kernel_module("linux") {
  module_name = "hafnium"
  kernel_target = "//third_party/linux:linux"
  kernel_dir = "//third_party/linux"
}
